--- a/src/main/resources/templates/cahier.html
+++ b/src/main/resources/templates/cahier.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Uasz-application</title>
+    <title>Gestion-Cahier</title>
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.2/font/bootstrap-icons.css">
 </head>
@@ -11,10 +11,10 @@
 <body>
 <div class="p-3">
     <div class="card">
-        <div class="card-header">Listes des UE</div>
+        <div class="card-header">LISTES DES CAHIERS</div>
         <div class="card-body">
             <form method="get" th:action="@{uasz}">
-                <label>Keyword</label>
+                <label>Recherche par nom [NOM] des cahiers</label>
                 <input type="text" name="keyword" th:value="${keyword}">
                 <button type="submit" class="btn btn-info">
                     <i class="bi bi-search"></i>
@@ -23,18 +23,23 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>ID</th> <th>Libelle</th> <th>Code</th> <th>Credits</th> <th>Coefficient</th> <th>Description</th> <th>dateCreation</th>
+                    <th>ID</th> <th>NOM</th> <th>PAGE</th> <th>QUALITE</th> <th>STOCK</th> <th>DATE</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="p:${list}">
                     <td th:text="${p.id}"></td>
-                    <td th:text="${p.libelle}"></td>
-                    <td th:text="${p.code}"></td>
-                    <td th:text="${p.credit}"></td>
-                    <td th:text="${p.coefficiant}"></td>
-                    <td th:text="${p.description}"></td>
-                    <td th:text="${p.dateCreation}"></td>
+                    <td th:text="${p.nom}"></td>
+                    <td th:text="${p.nbrePage}"></td>
+                    <td th:text="${p.qualite}"></td>
+                    <td th:text="${p.stock}"></td>
+                    <td th:text="${p.date}"></td>
+                    <td>
+                        <a onclick="javascript:return confirm('voulez-vous ajouter un cahier')"
+                            class="btn btn-success">
+                            <i class="bi bi-plus-square  "></i>
+                        </a>
+                    </td>
                     <td>
                         <a onclick="javascript:return confirm('etes-vous sur ?')"
                            th:href="@{delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}" class="btn btn-danger">
